fix for site name and overlapping weirdness

--- a/source/_patterns/03-templates/major-page/_major-page.scss
+++ b/source/_patterns/03-templates/major-page/_major-page.scss
@@ -53,6 +53,7 @@
       .majors-call-to-action {
         @include breakpoint(max-width $medium) {
           position: fixed;
+          z-index: 1;
           bottom: 0;
           left: 0;
           display: flex;
